--- a/dot_config/kitty/settings.conf
+++ b/dot_config/kitty/settings.conf
@@ -9,3 +9,6 @@ confirm_os_window_close 0
 
 map alt+left send_text all \x1b\x62
 map alt+right send_text all \x1b\x66
+
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
