Update .config/kitty/kitty.conf Add .config/kitty/ui/tokyonight_moon.conf

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,4 +1,5 @@
 include ./ui/cattpuccin_macchiato.conf
+include ./ui/tokyonight_moon.conf
 include ./cursor.conf
 include ./font.conf
 include ./mouse.conf
