--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./ui/cattpuccin_macchiato.conf
+# include ./ui/cattpuccin_macchiato.conf
 include ./ui/tokyonight_moon.conf
 include ./cursor.conf
 include ./font.conf
