--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -1,31 +1,156 @@
 tap "daipeihust/tap"
 tap "homebrew/bundle"
 tap "homebrew/services"
+tap "infisical/get-cli"
+tap "koekeishiya/formulae"
+tap "modularml/packages"
+tap "mongodb/brew"
 tap "nikitabobko/tap"
+tap "zegervdv/zathura"
+brew "librsvg"
+brew "adwaita-icon-theme"
+brew "grpc"
+brew "apache-arrow"
 brew "node"
 brew "bitwarden-cli"
 brew "chezmoi"
 brew "cmake"
+brew "coder"
 brew "docker-compose"
+brew "dvc"
+brew "enchant"
+brew "ghostscript"
+brew "pinentry"
+brew "gnupg"
+brew "gpgme"
+brew "gtk+3"
+brew "gspell"
+brew "poppler"
+brew "evince"
 brew "fd"
+brew "tesseract"
+brew "ffmpeg"
 brew "fzf"
 brew "git"
+brew "pkg-config"
+brew "libheif"
 brew "graphicsmagick"
+brew "gstreamer"
+brew "helix"
+brew "libraw"
 brew "imagemagick"
+brew "iproute2mac"
+brew "krb5"
+brew "perl"
+brew "latexindent"
+brew "lazygit"
+brew "libfido2"
+brew "libpq"
 brew "libvirt"
 brew "luajit"
 brew "luarocks"
+brew "maven"
+brew "mcfly"
+brew "mdcat"
+brew "meson"
+brew "mtr"
+brew "mysql"
+brew "mysql-client"
+brew "openssl@1.1"
+brew "tree-sitter"
 brew "neovim"
-brew "python@3.12"
+brew "neovide", link: false
+brew "nmap"
+brew "node@18"
+brew "pandoc"
+brew "postgresql@14"
+brew "progress"
+brew "python-ply"
+brew "python@3.10"
+brew "python@3.11"
+brew "tcl-tk"
+brew "python@3.8"
+brew "pyvim"
+brew "ripgrep"
 brew "rsync"
+brew "sphinx-doc"
+brew "spicetify-cli"
 brew "starship"
+brew "tesseract-lang"
+brew "tmux"
+brew "tree"
 brew "virt-manager"
+brew "wget"
 brew "wireguard-tools"
+brew "xclip"
+brew "youtube-dl"
+brew "zoxide"
+brew "infisical/get-cli/infisical"
+brew "modularml/packages/modular"
+brew "zegervdv/zathura/girara", args: ["HEAD"]
+brew "zegervdv/zathura/zathura", args: ["HEAD"]
+brew "zegervdv/zathura/zathura-pdf-poppler"
 cask "aerospace"
+cask "caffeine"
 cask "docker"
 cask "flameshot"
 cask "floorp"
+cask "gitkraken-cli"
 cask "jordanbaird-ice"
+cask "neovide"
 cask "orbstack"
 cask "raycast"
 cask "switchkey"
+cask "teamspeak-client"
+cask "warp"
+cask "x2goclient"
+vscode "farosystemappender constructor"
+vscode "anysphere.pyright"
+vscode "asvetliakov.vscode-neovim"
+vscode "bnavetta.zoterolatex"
+vscode "donjayamanne.python-environment-manager"
+vscode "eamodio.gitlens"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "hai.neovimsync"
+vscode "james-yu.latex-workshop"
+vscode "janisdd.vscode-edit-csv"
+vscode "jeanp413.open-remote-ssh"
+vscode "julianiaquinandi.nvim-ui-modifier"
+vscode "k--kato.intellij-idea-keybindings"
+vscode "mathematic.vscode-latex"
+vscode "mechatroner.rainbow-csv"
+vscode "modular-mojotools.vscode-mojo"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-powertoys"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
+vscode "ms-vscode.cmake-tools"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.cpptools-extension-pack"
+vscode "ms-vscode.cpptools-themes"
+vscode "ms-vscode.remote-explorer"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "quarto.quarto"
+vscode "redhat.java"
+vscode "twxs.cmake"
+vscode "visualstudioexptteam.intellicode-api-usage-examples"
+vscode "visualstudioexptteam.vscodeintellicode"
+vscode "vscjava.vscode-java-debug"
+vscode "vscjava.vscode-java-dependency"
+vscode "vscjava.vscode-java-pack"
+vscode "vscjava.vscode-java-test"
+vscode "vscjava.vscode-maven"
+vscode "vscodevim.vim"
+vscode "wakatime.vscode-wakatime"
+vscode "xelad0m.jupyter-toc"
