--- a/dot_config/kitty/settings.conf
+++ b/dot_config/kitty/settings.conf
@@ -7,8 +7,12 @@ clipboard_control write-clipboard write-primary
 
 confirm_os_window_close 0
 
+# relevant for smart movement
 map alt+left send_text all \x1b\x62
 map alt+right send_text all \x1b\x66
+
+# relevant for slime 
+map shift+enter send_text all \x1b[13;2u
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
