--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -154,3 +154,4 @@ vscode "vscjava.vscode-maven"
 vscode "vscodevim.vim"
 vscode "wakatime.vscode-wakatime"
 vscode "xelad0m.jupyter-toc"
+brew "rage"
