--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -6,11 +6,20 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "features": {
+    "inline_completion_provider": "supermaven"
+  },
   "assistant": {
     "version": "2",
     "default_model": {
       "provider": "zed.dev",
       "model": "claude-3-5-sonnet-20240620"
+    }
+  },
+  "language_models": {
+    "anthropic": {
+      "version": "1",
+      "low_speed_timeout_in_seconds": 60
     }
   },
   "base_keymap": "JetBrains",
