--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -73,7 +73,7 @@ enable-normalization-flatten-containers = false
 enable-normalization-opposite-orientation-for-nested-containers = false
 
 [mode.main.binding]
-cmd-alt-ctrl-enter = 'exec-and-forget open -n /Applications/kitty.app' 
+cmd-alt-ctrl-enter = 'exec-and-forget open -n /Applications/ghostty.app' 
 
 cmd-alt-ctrl-j = 'focus left'
 cmd-alt-ctrl-k = 'focus down'
