Add .install-password-manager.sh Update .config/aerospace/aerospace.toml

--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -207,6 +207,10 @@ if.app-id = 'com.microsoft.VSCode'
 run = 'move-node-to-workspace 3'
 
 [[on-window-detected]]
+if.app-id = 'com.exafunction.windsurf'
+run = 'move-node-to-workspace 3'
+
+[[on-window-detected]]
 if.app-id = 'com.jetbrains.intellij'
 run = 'move-node-to-workspace 3'
 
