--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -139,11 +139,11 @@ cmd-alt-ctrl-shift-c = 'reload-config'
 cmd-alt-ctrl-semicolon = 'mode join'
 
 [mode.join.binding]
-esc = 'mode main'
-h = ['join-with left', 'mode main']
-j = ['join-with down', 'mode main']
-k = ['join-with up', 'mode main']
-l = ['join-with right', 'mode main']
+esc = [ 'mode main', 'exec-and-forget sketchybar --trigger aerospace_leave_service_mode']
+h = ['join-with left', 'mode main', 'exec-and-forget sketchybar --trigger aerospace_leave_service_mode']
+j = ['join-with down', 'mode main', 'exec-and-forget sketchybar --trigger aerospace_leave_service_mode']
+k = ['join-with up', 'mode main', 'exec-and-forget sketchybar --trigger aerospace_leave_service_mode']
+l = ['join-with right', 'mode main', 'exec-and-forget sketchybar --trigger aerospace_leave_service_mode']
 
 cmd-alt-ctrl-r = 'mode resize'
 
