--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -76,11 +76,87 @@
       }
     }
   },
-  "lsp": {
-    "pyright": {
-      "settings": {
-        "python": {
-          "pythonPath": ".venv/bin/python"
+  // "lsp": {
+  //   "pyright": {
+  //     "settings": {
+  //       "python": {
+  //         "pythonPath": ".venv/bin/python"
+  //       }
+  //     }
+  //   }
+  // },
+  "languages": {
+      "Python": {
+        "language_servers": ["pylsp", "ruff", "!pyright", "..."],
+        "format_on_save": "on",
+        "formatter": [
+          {
+            "code_actions": {
+              "source.organizeImports.ruff": true,
+              "source.fixAll.ruff": true
+            }
+          },
+          {
+            "language_server": { "name": "ruff" }
+          }
+        ]
+      }
+    },
+    "lsp": {
+      "pylsp": {
+        "settings": {
+          "plugins": {
+            // disable plugins superseded by ruff
+            "autopep8": { "enabled": false },
+            "black": { "enabled": false },
+            "flake8": { "enabled": false },
+            "isort": { "enabled": false },
+            "mccabe": { "enabled": false },
+            "pycodestyle": { "enabled": false },
+            "pydocstyle": { "enabled": false },
+            "pyflakes": { "enabled": false },
+            "pylint": { "enabled": false },
+            "yapf": { "enabled": false },
+
+            // keep the others
+            "pylsp_mypy": { "enabled": true },
+            "jedi": { "enabled": true },
+            "rope": { "enabled": true },
+            "rope_autoimport": { "enabled": true },
+            "rope_completion": { "enabled": true },
+
+            // disable pylsp ruff in favor of `ruff server`
+            "ruff": { "enabled": false }
+          }
+        }
+      },
+      "ruff": {
+        "initialization_options": {
+          "settings": {
+            "configurationPreference": "filesystemFirst",
+            "configuration": {
+              "format": {
+                "quote-style": "double",
+                "skip-magic-trailing-comma": false
+              }
+            },
+            "codeAction": {
+              "disableRuleComment": { "enable": false },
+              "fixViolation": { "enable": true }
+            },
+            "lint": {
+              "select": ["E4", "E7", "E9", "F"],
+              "extendSelect": ["I"],
+              "enable": true
+            },
+            "format": {
+              "preview": true
+            },
+            "fixAll": true,
+            "organizeImports": true,
+            "showSyntaxErrors": true,
+            "lineLength": 100
+          }
         }
       }
     }
