--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -14,3 +14,4 @@ keybind = alt+l=goto_split:right
 keybind = alt+h=goto_split:left
 keybind = alt+k=goto_split:top
 keybind = alt+j=goto_split:bottom
+keybind = shift+enter=text:\n
