--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -24,20 +24,21 @@
     "edit_prediction_provider": "zed"
   },
   "agent": {
+    "always_allow_tool_actions": true,
     "inline_assistant_model": {
       "provider": "zed.dev",
       "model": ""
     },
     "default_model": {
-      "provider": "google",
-      "model": "gemini-2.5-pro"
+      "provider": "zed.dev",
+      "model": "claude-sonnet-4-thinking"
     }
   },
   "base_keymap": "JetBrains",
   "buffer_font_family": "JetBrains Mono",
   "theme": {
     "mode": "system",
-    "light": "Tokyo Night Light",
+    "light": "One Light",
     "dark": "Tokyo Night"
   },
   "vim_mode": true,
@@ -69,19 +70,10 @@
       }
     }
   },
-  // "lsp": {
-  //   "pyright": {
-  //     "settings": {
-  //       "python": {
-  //         "pythonPath": ".venv/bin/python"
-  //       }
-  //     }
-  //   }
-  // },
- "languages": {
-   "TOML": {
-     "language_servers": ["!Taplo"]
-   },
+  "languages": {
+    "TOML": {
+      "language_servers": ["!Taplo"]
+    },
     "Python": {
       "language_servers": ["basedpyright", "ruff", "!pyright", "..."],
       "format_on_save": "on",
@@ -132,7 +124,7 @@
           "jedi": { "enabled": true },
           "rope": { "enabled": true },
           "rope_autoimport": { "enabled": true },
-          "rope_completion": { "enabled": true },
+          "rope_completion": { "enabled": true }
 
           // disable pylsp ruff in favor of `ruff server`
           // "ruff": { "enabled": false }
