--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -39,7 +39,7 @@
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "Tokyo Night"
+    "dark": "One Dark"
   },
   "vim_mode": true,
   "ui_font_size": 14,
